--- a/package.json
+++ b/package.json
@@ -4,11 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha server/**/*.test.js",
+    "test-watch": "nodemon --exec \"npm test\" "
   },
   "author": "mohamad reza",
   "license": "ISC",
   "dependencies": {
-    "mongodb": "^3.6.0"
+    "body-parser": "^1.19.0",
+    "expect": "^26.4.2",
+    "express": "^4.17.1",
+    "mocha": "^8.1.3",
+    "mongodb": "^3.6.0",
+    "mongoose": "^5.10.0",
+    "supertest": "^4.0.2"
   }
 }
