--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "expect": "^26.4.2",
     "express": "^4.17.1",
+    "lodash": "^4.17.20",
     "mocha": "^8.1.3",
     "mongodb": "^3.6.0",
     "mongoose": "^5.10.0",
